# communal_music_client

./: .gitignore  CMakeLists.txt
misc/: notes.txt
src/: Network.cpp  Network.h  Player.cpp  Player.h  Sample.cpp  Sample.h  SampleTypes.cpp  SampleTypes.h  Synth.cpp  Synth.h  Transport.cpp  Transport.h  main.cpp
